# Distributed-Vision-AI-Platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
config/: camera_configs.json  cameras.seed.json
dashboard/: app.js  index.html  styles.css
deployments/docker-compose/: docker-compose.yml
deployments/prometheus/: prometheus.yml
docs/: architecture.md  local-demo-guide.md  performance-report.md  scaling-strategy.md  task-list.md  troubleshooting.md
libs/common/: camera_config.py  config.py  db.py  event_rules.py  event_settings.py  geometry.py  hls.py  logging.py  metrics.py  redis_client.py  visualization.py  webrtc.py
libs/metrics/: README.md
libs/schemas/: messages.py
libs/tracking/: mock_tracker.py  yolo_bytetrack.py
scripts/benchmark/: README.md
scripts/load-test/: scale_cameras.py
scripts/mock-rtsp/: README.md
services/backend_api/app/: main.py
services/event_engine/app/: main.py
services/inference_worker/app/: main.py
services/scheduler/app/: main.py
services/stream_gateway/app/: main.py
